# LLMs-Generator

./: .env  .env.example  .gitignore  GEMINI.md  Makefile  README.md  TODO.md  llms.txt  pyproject.toml
.gemini/: settings.json
docs/: review_output.md  solution-design.md
notebooks/: generate_llms_experiments.ipynb
sample_output/: dazbo-adk-llms.txt  llms.txt  llms.txt.2
src/client_fe/: __init__.py  cli.py  runner.py
src/common_utils/: __init__.py  exceptions.py  logging_utils.py  retry_utils.py
src/llms_gen_agent/: __init__.py  agent.py  config.py  schema_types.py  tools.py
src/llms_gen_agent/sub_agents/doc_summariser/: __init__.py  agent.py  tools.py
src/llms_gen_agent/sub_agents/project_summariser/: __init__.py  agent.py
src/tests/integration/: __init__.py
src/tests/unit/: __init__.py  test_config.py  test_doc_summariser_agent.py  test_logging_utils.py  test_read_files_tool.py  test_retry_utils.py  test_summarisation_workflow_tools.py  test_tools.py
